# Simeer

./: .gitignore  CITATION.cff  README.md  description.md  pyproject.toml
examples/: Simeer_examples.ipynb  quickstart.py
scripts/: benchmark.py  benchmark_results.txt
simeer/: __init__.py  _parallel.py  beam.py  disc.py  interpolation.py  projection.py  simulator.py  sky_integrator.py  stokes.py
tests/: test_against_limtod.py  test_beam.py  test_interpolation.py  test_projection.py  test_sky_integrator.py  test_stokes.py
